parser/parser/vlanggrammar_parser.go
// Code generated from C:/Users/72358/Documents/Compi_2/Semana_01/awesomeProject/grammar/VLangGrammar.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // VLangGrammar
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type VLangGrammarParser struct {
	*antlr.BaseParser
}

var VLangGrammarParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func vlanggrammarParserInit() {
	staticData := &VLangGrammarParserStaticData
	staticData.LiteralNames = []string{
		"", "'mut'", "'func'", "'struct'", "'if'", "'else'", "'for'", "'switch'",
		"'case'", "'default'", "'break'", "'continue'", "'return'", "'in'",
		"'nil'", "'int'", "'float64'", "'string'", "'bool'", "'true'", "'false'",
		"'+'", "'-'", "'*'", "'/'", "'%'", "'='", "'+='", "'-='", "'=='", "'!='",
		"'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", "'!'", "'('", "')'", "'{'",
		"'}'", "'['", "']'", "';'", "','", "'.'", "':'", "'&'",
	}
	staticData.SymbolicNames = []string{
		"", "MUT", "FUNC", "STRUCT", "IF", "ELSE", "FOR", "SWITCH", "CASE",
		"DEFAULT", "BREAK", "CONTINUE", "RETURN", "IN", "NIL", "INT_TYPE", "FLOAT_TYPE",
		"STRING_TYPE", "BOOL_TYPE", "TRUE", "FALSE", "PLUS", "MINUS", "MULT",
		"DIV", "MOD", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", "EQ", "NE", "LT",
		"LE", "GT", "GE", "AND", "OR", "NOT", "LPAREN", "RPAREN", "LBRACE",
		"RBRACE", "LBRACKET", "RBRACKET", "SEMICOLON", "COMMA", "DOT", "COLON",
		"AMPERSAND", "INT", "FLOAT", "STRING", "RUNE", "ID", "LINE_COMMENT",
		"BLOCK_COMMENT", "WS", "IDENTIFIER", "DECLARE_ASSIGN", "RUNE_TYPE",
		"MULTIPLY", "DIVIDE", "MODULO", "LESS_THAN", "LESS_EQUAL", "GREATER_THAN",
		"GREATER_EQUAL", "EQUAL", "NOT_EQUAL", "INT_LITERAL", "FLOAT_LITERAL",
		"STRING_LITERAL", "RUNE_LITERAL", "PRINT", "ATOI", "PARSE_FLOAT", "TYPE_OF",
		"INDEX_OF", "JOIN", "LEN", "APPEND",
	}
	staticData.RuleNames = []string{
		"program", "declaration", "variable_declaration", "type_annotation",
		"slice_type", "function_declaration", "receiver", "parameter_list",
		"parameter", "struct_declaration", "struct_field", "statement", "assignment_statement",
		"if_statement", "for_statement", "switch_statement", "case_clause",
		"default_clause", "break_statement", "continue_statement", "return_statement",
		"expression_statement", "block_statement", "expression", "primary_expression",
		"slice_literal", "struct_literal", "field_assignment_list", "field_assignment",
		"builtin_function_call", "argument_list", "expression_list",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// VLangGrammarParserInit initializes any static state used to implement VLangGrammarParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewVLangGrammarParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func VLangGrammarParserInit() {
	staticData := &VLangGrammarParserStaticData
	staticData.once.Do(vlanggrammarParserInit)
}

// NewVLangGrammarParser produces a new parser instance for the optional input antlr.TokenStream.
func NewVLangGrammarParser(input antlr.TokenStream) *VLangGrammarParser {
	VLangGrammarParserInit()
	this := new(VLangGrammarParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &VLangGrammarParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "VLangGrammar.g4"

	return this
}

// VLangGrammarParser tokens.
const (
	VLangGrammarParserEOF            = antlr.TokenEOF
	VLangGrammarParserMUT            = 1
	VLangGrammarParserFUNC           = 2
	VLangGrammarParserSTRUCT         = 3
	VLangGrammarParserIF             = 4
	VLangGrammarParserELSE           = 5
	VLangGrammarParserFOR            = 6
	VLangGrammarParserSWITCH         = 7
	VLangGrammarParserCASE           = 8
	VLangGrammarParserDEFAULT        = 9
	VLangGrammarParserBREAK          = 10
	VLangGrammarParserCONTINUE       = 11
	VLangGrammarParserRETURN         = 12
	VLangGrammarParserIN             = 13
	VLangGrammarParserNIL            = 14
	VLangGrammarParserINT_TYPE       = 15
	VLangGrammarParserFLOAT_TYPE     = 16
	VLangGrammarParserSTRING_TYPE    = 17
	VLangGrammarParserBOOL_TYPE      = 18
	VLangGrammarParserTRUE           = 19
	VLangGrammarParserFALSE          = 20
	VLangGrammarParserPLUS           = 21
	VLangGrammarParserMINUS          = 22
	VLangGrammarParserMULT           = 23
	VLangGrammarParserDIV            = 24
	VLangGrammarParserMOD            = 25
	VLangGrammarParserASSIGN         = 26
	VLangGrammarParserPLUS_ASSIGN    = 27
	VLangGrammarParserMINUS_ASSIGN   = 28
	VLangGrammarParserEQ             = 29
	VLangGrammarParserNE             = 30
	VLangGrammarParserLT             = 31
	VLangGrammarParserLE             = 32
	VLangGrammarParserGT             = 33
	VLangGrammarParserGE             = 34
	VLangGrammarParserAND            = 35
	VLangGrammarParserOR             = 36
	VLangGrammarParserNOT            = 37
	VLangGrammarParserLPAREN         = 38
	VLangGrammarParserRPAREN         = 39
	VLangGrammarParserLBRACE         = 40
	VLangGrammarParserRBRACE         = 41
	VLangGrammarParserLBRACKET       = 42
	VLangGrammarParserRBRACKET       = 43
	VLangGrammarParserSEMICOLON      = 44
	VLangGrammarParserCOMMA          = 45
	VLangGrammarParserDOT            = 46
	VLangGrammarParserCOLON          = 47
	VLangGrammarParserAMPERSAND      = 48
	VLangGrammarParserINT            = 49
	VLangGrammarParserFLOAT          = 50
	VLangGrammarParserSTRING         = 51
	VLangGrammarParserRUNE           = 52
	VLangGrammarParserID             = 53
	VLangGrammarParserLINE_COMMENT   = 54
	VLangGrammarParserBLOCK_COMMENT  = 55
	VLangGrammarParserWS             = 56
	VLangGrammarParserIDENTIFIER     = 57
	VLangGrammarParserDECLARE_ASSIGN = 58
	VLangGrammarParserRUNE_TYPE      = 59
	VLangGrammarParserMULTIPLY       = 60
	VLangGrammarParserDIVIDE         = 61
	VLangGrammarParserMODULO         = 62
	VLangGrammarParserLESS_THAN      = 63
	VLangGrammarParserLESS_EQUAL     = 64
	VLangGrammarParserGREATER_THAN   = 65
	VLangGrammarParserGREATER_EQUAL  = 66
	VLangGrammarParserEQUAL          = 67
	VLangGrammarParserNOT_EQUAL      = 68
	VLangGrammarParserINT_LITERAL    = 69
	VLangGrammarParserFLOAT_LITERAL  = 70
	VLangGrammarParserSTRING_LITERAL = 71
	VLangGrammarParserRUNE_LITERAL   = 72
	VLangGrammarParserPRINT          = 73
	VLangGrammarParserATOI           = 74
	VLangGrammarParserPARSE_FLOAT    = 75
	VLangGrammarParserTYPE_OF        = 76
	VLangGrammarParserINDEX_OF       = 77
	VLangGrammarParserJOIN           = 78
	VLangGrammarParserLEN            = 79
	VLangGrammarParserAPPEND         = 80
)

// VLangGrammarParser rules.
const (
	VLangGrammarParserRULE_program               = 0
	VLangGrammarParserRULE_declaration           = 1
	VLangGrammarParserRULE_variable_declaration  = 2
	VLangGrammarParserRULE_type_annotation       = 3
	VLangGrammarParserRULE_slice_type            = 4
	VLangGrammarParserRULE_function_declaration  = 5
	VLangGrammarParserRULE_receiver              = 6
	VLangGrammarParserRULE_parameter_list        = 7
	VLangGrammarParserRULE_parameter             = 8
	VLangGrammarParserRULE_struct_declaration    = 9
	VLangGrammarParserRULE_struct_field          = 10
	VLangGrammarParserRULE_statement             = 11
	VLangGrammarParserRULE_assignment_statement  = 12
	VLangGrammarParserRULE_if_statement          = 13
	VLangGrammarParserRULE_for_statement         = 14
	VLangGrammarParserRULE_switch_statement      = 15
	VLangGrammarParserRULE_case_clause           = 16
	VLangGrammarParserRULE_default_clause        = 17
	VLangGrammarParserRULE_break_statement       = 18
	VLangGrammarParserRULE_continue_statement    = 19
	VLangGrammarParserRULE_return_statement      = 20
	VLangGrammarParserRULE_expression_statement  = 21
	VLangGrammarParserRULE_block_statement       = 22
	VLangGrammarParserRULE_expression            = 23
	VLangGrammarParserRULE_primary_expression    = 24
	VLangGrammarParserRULE_slice_literal         = 25
	VLangGrammarParserRULE_struct_literal        = 26
	VLangGrammarParserRULE_field_assignment_list = 27
	VLangGrammarParserRULE_field_assignment      = 28
	VLangGrammarParserRULE_builtin_function_call = 29
	VLangGrammarParserRULE_argument_list         = 30
	VLangGrammarParserRULE_expression_list       = 31
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllDeclaration() []IDeclarationContext
	Declaration(i int) IDeclarationContext
	AllFunction_declaration() []IFunction_declarationContext
	Function_declaration(i int) IFunction_declarationContext
	AllStruct_declaration() []IStruct_declarationContext
	Struct_declaration(i int) IStruct_declarationContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VLangGrammarParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VLangGrammarParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = VLangGrammarParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(VLangGrammarParserEOF, 0)
}

func (s *ProgramContext) AllDeclaration() []IDeclarationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDeclarationContext); ok {
			len++
		}
	}

	tst := make([]IDeclarationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDeclarationContext); ok {
			tst[i] = t.(IDeclarationContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Declaration(i int) IDeclarationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeclarationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeclarationContext)
}

func (s *ProgramContext) AllFunction_declaration() []IFunction_declarationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFunction_declarationContext); ok {
			len++
		}
	}

	tst := make([]IFunction_declarationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFunction_declarationContext); ok {
			tst[i] = t.(IFunction_declarationContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Function_declaration(i int) IFunction_declarationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunction_declarationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunction_declarationContext)
}

func (s *ProgramContext) AllStruct_declaration() []IStruct_declarationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStruct_declarationContext); ok {
			len++
		}
	}

	tst := make([]IStruct_declarationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStruct_declarationContext); ok {
			tst[i] = t.(IStruct_declarationContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Struct_declaration(i int) IStruct_declarationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStruct_declarationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStruct_declarationContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VLangGrammarListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VLangGrammarListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case VLangGrammarVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *VLangGrammarParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, VLangGrammarParserRULE_program)
	var _la int

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(69)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext())
	if p.HasError() {
		goto errorExit
	}
	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			p.SetState(67)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}

			switch p.GetTokenStream().LA(1) {
			case VLangGrammarParserMUT, VLangGrammarParserIDENTIFIER:
				{
					p.SetState(64)
					p.Declaration()
				}

			case VLangGrammarParserFUNC:
				{
					p.SetState(65)
					p.Function_declaration()
				}

			case VLangGrammarParserSTRUCT:
				{
					p.SetState(66)
					p.Struct_declaration()
				}

			default:
				p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
				goto errorExit
			}

		}
		p.SetState(71)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
	}
	p.SetState(75)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == VLangGrammarParserFUNC {
		{
			p.SetState(72)
			p.Function_declaration()
		}

		p.SetState(77)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(78)
		p.Match(VLangGrammarParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDeclarationContext is an interface to support dynamic dispatch.
type IDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Variable_declaration() IVariable_declarationContext
	Assignment_statement() IAssignment_statementContext

	// IsDeclarationContext differentiates from other interfaces.
	IsDeclarationContext()
}

type DeclarationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclarationContext() *DeclarationContext {
	var p = new(DeclarationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VLangGrammarParserRULE_declaration
	return p
}

func InitEmptyDeclarationContext(p *DeclarationContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VLangGrammarParserRULE_declaration
}

func (*DeclarationContext) IsDeclarationContext() {}

func NewDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclarationContext {
	var p = new(DeclarationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = VLangGrammarParserRULE_declaration

	return p
}

func (s *DeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclarationContext) Variable_declaration() IVariable_declarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVariable_declarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVariable_declarationContext)
}

func (s *DeclarationContext) Assignment_statement() IAssignment_statementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAssignment_statementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAssignment_statementContext)
}

func (s *DeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VLangGrammarListener); ok {
		listenerT.EnterDeclaration(s)
	}
}

func (s *DeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VLangGrammarListener); ok {
		listenerT.ExitDeclaration(s)
	}
}

func (s *DeclarationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case VLangGrammarVisitor:
		return t.VisitDeclaration(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *VLangGrammarParser) Declaration() (localctx IDeclarationContext) {
	localctx = NewDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, VLangGrammarParserRULE_declaration)
	p.SetState(82)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 3, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(80)
			p.Variable_declaration()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(81)
			p.Assignment_statement()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IVariable_declarationContext is an interface to support dynamic dispatch.
type IVariable_declarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsVariable_declarationContext differentiates from other interfaces.
	IsVariable_declarationContext()
}

type Variable_declarationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVariable_declarationContext() *Variable_declarationContext {
	var p = new(Variable_declarationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VLangGrammarParserRULE_variable_declaration
	return p
}

func InitEmptyVariable_declarationContext(p *Variable_declarationContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VLangGrammarParserRULE_variable_declaration
}

func (*Variable_declarationContext) IsVariable_declarationContext() {}

func NewVariable_declarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Variable_declarationContext {
	var p = new(Variable_declarationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = VLangGrammarParserRULE_variable_declaration

	return p
}

func (s *Variable_declarationContext) GetParser() antlr.Parser { return s.parser }

func (s *Variable_declarationContext) CopyAll(ctx *Variable_declarationContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *Variable_declarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Variable_declarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type InferredVarDeclContext struct {
	Variable_declarationContext
}

func NewInferredVarDeclContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *InferredVarDeclContext {
	var p = new(InferredVarDeclContext)

	InitEmptyVariable_declarationContext(&p.Variable_declarationContext)
	p.parser = parser
	p.CopyAll(ctx.(*Variable_declarationContext))

	return p
}

func (s *InferredVarDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InferredVarDeclContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(VLangGrammarParserIDENTIFIER, 0)
}

func (s *InferredVarDeclContext) DECLARE_ASSIGN() antlr.TerminalNode {
	return s.GetToken(VLangGrammarParserDECLARE_ASSIGN, 0)
}

func (s *InferredVarDeclContext) Expression() IExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *InferredVarDeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VLangGrammarListener); ok {
		listenerT.EnterInferredVarDecl(s)
	}
}

func (s *InferredVarDeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VLangGrammarListener); ok {
		listenerT.ExitInferredVarDecl(s)
	}
}

func (s *InferredVarDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case VLangGrammarVisitor:
		return t.VisitInferredVarDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

type TypedVarDeclContext struct {
	Variable_declarationContext
}
